<?xml version="1.0" encoding="utf-8"?><!--
    garlic-launcher: Android Launcher for the Digital Signage Software garlic-player

    Copyright (C) 2020 Nikolaos Sagiadinos <ns@smil-control.com>
    This file is part of the garlic-player source code

    This program is free software: you can redistribute it and/or  modify
    it under the terms of the GNU Affero General Public License, version 3,
    as published by the Free Software Foundation.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">GarlicLauncher</string>
    <string name="device_admin">GarlicLauncher</string>
    <string name="device_admin_description">GarlicLauncher</string>
    <string name="become_launcher">Become Launcher</string>
    <string name="restore_old_launcher">Restore old Launcher</string>
    <string name="play">Play</string>
    <string name="unpin_app">Unpin App</string>
    <string name="pin_app">Pin App</string>
    <string name="count_down">Cancel autoplay in %1$ss</string>
    <string name="no_garlic">No player: Install Digital Signage Player via USB or network.</string>
    <string name="no_network">No Network: Activate a network.</string>
    <string name="download_player_in_progress">Try downloading Digital Signage Player - Please wait!</string>
    <string name="install_player_in_progress">Install Digital Signage Player - Please wait!</string>
    <string name="config_launcher">Launcher Setting</string>
    <string name="root_found_set_device_owner">Device is rooted! Try to config Launcher as Device Owner - Please wait</string>
    <string name="config_wifi">Set WiFi</string>
    <string name="android_settings">Android Settings</string>
    <string name="set_content_url">Set Content Url</string>
    <string name="no_device_owner">The launcher must be set as device owner to work</string>
    <string name="no_basic_permissions">The launcher misses essential permissions</string>
    <string name="save_and_close">Save &amp; Close</string>
    <string name="own_back_button">Own Back Button</string>
    <string name="strict_kiosk_use">Strict kiosk use</string>
    <string name="active_service_password">Service Password</string>
    <string name="enter_service_mode">Enter Service Mode</string>
    <string name="enter_strict_mode">Enter Strict Mode</string>
    <string name="service_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">unknown error</string>
    <string name="missing_password">There is no password set!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_player_start_delay_after_booting">No player start delay after booting</string>
    <string name="start_delay_text">&lt; %ss Player start delay</string>
    <string name="content_url">Content Url</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="reboot_after_install">Reboot after install</string>
    <string name="toggle_daily_reboot">Daily reboot: </string>
    <string name="reboot_time">&lt; %s</string>
    <string name="standby_mode">Standby Mode:</string>
    <string name="discspace">DiscSpace</string>
    <string name="ip">IP</string>
</resources>