<?xml version="1.0" encoding="utf-8"?>
<!--
    garlic-launcher: Android Launcher for the Digital Signage Software garlic-player

    Copyright (C) 2020 Nikolaos Sagiadinos <ns@smil-control.com>
    This file is part of the garlic-player source code

    This program is free software: you can redistribute it and/or  modify
    it under the terms of the GNU Affero General Public License, version 3,
    as published by the Free Software Foundation.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btToggleLockTask"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="toggleLockTask"
            android:text="@string/pin_app"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btToggleLauncher"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleLauncher"
            android:text="@string/restore_old_launcher"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btToggleServiceMode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleServiceMode"
            android:text="@string/enter_service_mode"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressDownload"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="1"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAdminConfiguration"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="configAdmin"
            android:text="@string/config_service_admin"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btConfigureWiFi"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="configWiFi"
            android:text="@string/config_wifi"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSetContentURI"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setContentUrl"
            android:text="@string/set_content_url"
            android:textSize="24sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/btStartPlayer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleGarlicPlayerStartTimer"
            android:text="@string/play"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
